examples/policies/deno-kcp/constraints/change-succeeded-with-failed-acceptance.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: ChangeSucceededWithFailedAcceptance
metadata:
  name: change-succeeded-with-failed-acceptance
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups:
      - specs.publicdomainrelay.dev
      kinds:
      - SpecChange
